fix: addressing review comment for native build